# vnpy-ai-hedge-fund

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  _smoke_test.py  _test_engine.py  _verify_providers.py  mypy.ini  pyproject.toml  run_veighna_ai.py  run_veighna_ui.bat  run_veighna_ui.ps1  test_imports.py
config/: .env.example  default_settings.json  llm_providers.json
config/agent_profiles/: growth_investing.json  macro_trading.json  value_investing.json
docker/: Dockerfile.agent  Dockerfile.core  Dockerfile.web  docker-compose.yml
docs/: agent_development_guide.md  api_reference.md  architecture.md  deployment_guide.md  migration_guide.md
examples/ai_agent_strategy/: config.json  run.py
examples/multi_agent_backtest/: run.py
examples/notebook/: ai_agent_research.ipynb
tests/: conftest.py
tests/fixtures/: mock_agent_outputs.py  mock_llm_responses.py  mock_market_data.py
tests/integration/: test_agent_workflow.py  test_backtest_integration.py  test_engine_integration.py  test_order_flow.py  test_vnpy_integration.py
tests/unit/: test_agent_base.py  test_config.py  test_data_adapter.py  test_engine_workflow.py  test_event_adapter.py  test_llm_postprocess.py  (+2 more)
vnpy/: CHANGELOG.md  README.md  README_ENG.md  pyproject.toml
vnpy_ai/: __init__.py  app.py  config.py  data_adapter.py  engine.py  event_adapter.py  models.py  monitoring.py  order_adapter.py  rpc_bridge.py
vnpy_ai_web/: __init__.py
zheng-docs/: AGENTS-template.md  VeighNa-AI-Hedge-Fund-整合方案.md  report-AI Hedge Fund.md  report-vnpy.md  实现审查报告.md  模拟交易操作指南.md  记录.md
(+130 files in other folders)
